# uvm-dweb

./: README.md
BCP DWEB 11 React/myproject/: package-lock.json
BCP DWEB Ejercicio Semanal 12 PD MVC/: README.md  app.py
BCP DWEB Ejercicio Semanal 12 PD MVC/static/: style.css
BCP DWEB Ejercicio Semanal 12 PD MVC/templates/: base.html  index.html
BCP DWEB Ejercicio semanal 10 JavaScript:Api Asincronas/: index.html
BCP DWEB Ejercicio semanal 10 JavaScript:Api Asincronas/css/: estilo.css
BCP DWEB Ejercicio semanal 11/: index.html
BCP DWEB Ejercicio semanal 11 Ejercicio Practico/: index.html
BCP DWEB Ejercicio semanal 15/: restaurante.sql
BCP DWEB Ejercicio semanal 16 EBD/: sumaNumeros.md  sumaNumeros.py  valorMayor.md  valorMayor.py
BCP DWEB Ejercicio semanal 17 EBD/: gestionEstudiantes.md  gestionEstudiantes.py  manipulacionListas.md  manipulacionListas.py
BCP DWEB Ejercicio semanal 22 Web MPA/: package-lock.json
BCP DWEB Ejercicio semanal 6 EBD/: index.html
BCP DWEB Ejercicio semanal 7/: index.html
BCP DWEB Ejercicio semanal 7 EBD/: index.html
BCP DWEB Ejercicio semanal 8/: index.html
BCP DWEB Ejercicio semanal 8.2 EBD/: index.html
BCP DWEB Ejercicio semanal 9 JavaScript/: index.html
BCP DWEB bootcampES4/: algoritmoNumerosPares.psc
BCP_DWEB_Caso_Practico_Consulta_API_MVC/: index.html  main.js
BCP_DWEB_Caso_Practico_S4/: index.html
BCP_DWEB_Caso_Práctico_4_Integracion_JS_mySQL/: conexion_db.js  ejemplo_usuarios.sql
BCP_DWEB_Ejercicio_Semanal_5_EBD/: articulo.html
Proyecto_Phyton_Poetry/app/mi_proyecto/: pyproject.toml
(+56 files in other folders)
